# Epitech-Project

./: README.md
202unsold (Python)/: 202unsold  README.md
Indie Studio (CPP)/: CMakeLists.txt  README.md
Indie Studio (CPP)/include/: CEventReceiver.hpp  indie.hpp  my_cube.hpp  my_map.hpp  my_music.hpp
Indie Studio (CPP)/src/: CEventReceiver.cpp  indie.cpp  main.cpp  my_cube.cpp  my_map.cpp
Wolfram (Haskell)/: Main.hs  Makefile  README.md  wolfram  wolfram.hi  wolfram.hs
arcade (CPP)/: IDisplayModule.hpp  Makefile  README.md
arcade (CPP)/Core/: Arcade.cpp  Arcade.hpp  main.cpp
arcade (CPP)/Graphic/: GraphLibLoader.cpp  GraphLibLoader.hpp  IGraphicLib.hpp  Makefile
arcade (CPP)/SRC_Games/: GameLibLoader.cpp  GameLibLoader.hpp  IGameLib.hpp  Makefile
getnextline (C)/: README.md  get_next_line.c  get_next_line.h
groundhog (Python)/: README.md  groundhog
minilibc (assembly language)/: Makefile  README.md  my_memcpy.asm  my_memmove.asm  my_memset.asm  my_rindex.asm  my_strcasecmp.asm  my_strchr.asm  my_strcmp.asm  my_strlen.asm  my_strncmp.asm  my_strpbrk.asm  my_strstr.asm
my_sokoban (C)/: Makefile  README.md  map_to_str.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_sokoban.c  my_strcpy.c  my_strlen.c
myftp (C)/: Makefile  README.md
myftp (C)/include/: ftp.h
myftp (C)/src/: main.c  my_ftp.c  send_handling.c  send_handling2.c  send_handling3.c  tool.c  tool2.c  tool3.c
need 4 steek (C)/: Makefile  README.md
need 4 steek (C)/include/: get_next_line.h  tail.h
need 4 steek (C)/src/: car.c  get_next_line.c  itoa.c  main.c  my_str_to_word_array.c  (+2 more)
(+20 files in other folders)
